# onlab

./: Untitled Diagram.xml  csi-class-2.xml  fuzesi_mate_computer_vision.pptx
CvDataSubscriber/: .cproject  .project
CvDataSubscriber/src/: CvDataSubscriber.cpp
chessboard/: .cproject  .project  left_camMatrix.yml  right_camMatrix.yml
chessboard/src/: chessboard.cpp
cmakeCV/: .cproject  .project  CMakeLists.txt
cmakeCV/Application/: CMakeLists.txt
cmakeCV/Application/src/: cvApplication.cpp
cmakeCV/ComputerVision/: CMakeLists.txt  matrices.yml  new_input.json
cmakeCV/ComputerVision/include/: ArucoImageProcessor.h  Camera.h  CircleDetector.h  ComputerVision.h  CoordinateTransformer.h  DataProvider.h  DataSender.h  DataSenderFactory.h  DataTypes.h  FrameProvider.h  FrameProviderFactory.h  IRTDImageProcessor.h  ImageProcessor.h  ImageProcessorFactory.h  LedController.h  ModelDataStore.h  Object.h  ObjectDataCollector.h  Processor.h  SimpleVisualizer.h  VideoSource.h  Visualizer.h  VisualizerFactory.h  ZeroMQDataSender.h
cmakeCV/ComputerVision/src/: ArucoImageProcessor.cpp  ArucoImageProcessor.h  Camera.cpp  Camera.h  CircleDetector.cpp  ComputerVision.cpp  ComputerVision.h  CoordinateTransformer.cpp  DataProvider.cpp  FrameProvider.h  FrameProviderFactory.h  IRTDImageProcessor.cpp  IRTDImageProcessor.h  InitFailedException.cpp  LedController.cpp  LedController.h  Marker.cpp  Marker.h  Model.cpp  ModelDataStore.cpp  ModelDataStore.h  Object.cpp  Object.h  ObjectDataCollector.cpp  Pattern.cpp  Provider.h  SimpleVisualizer.cpp  VideoSource.cpp  Visualizer.cpp  ZeroMQDataSender.cpp  cvApplication.cpp
cmakeCV/StereoCalibrate/: CMakeLists.txt
cmakeCV/include/: ArucoImageProcessor.h  CircleDetector.h  DataProvider.h  LedController.h  Model.h  Pattern.h  SerialComm.h
cmakeCV/src/: ArucoImageProcessor.cpp  Camera.cpp  CircleDetector.cpp  ComputerVision.cpp  ComputerVision.h  DataProvider.cpp  IRTDImageProcessor.cpp  ImageProcessor.h  LedController.cpp  Model.cpp  Object.cpp  Object.h  Processor.h  Provider.h  SerialComm.cpp  Visualizer.cpp  cvApplication.cpp
cvApplication/: .cproject  .gitignore  .project  aruco_config.json  doksiba.json  graph_arch.graphml  input.json  input_2.json  new_input.json  o.json  out1.json
cvApplication/src/: .cproject  .project  ArucoImageProcessor.cpp  ArucoImageProcessor.h  ArucoObject.cpp  ArucoObject.h  Camera.cpp  Camera.h  CircleDetector.cpp  CircleDetector.h  ComplexObject.cpp  ComplexObject.h  ComputerVision.cpp  ComputerVision.h  CoordinateTransformer.cpp  CoordinateTransformer.h  DataProvider.cpp  DataProvider.h  FrameProvider.h  FrameProviderFactory.cpp  IImageProcessor.h  IRImageProcessor.cpp  IRImageProcessor.h  IRObject.cpp  IRTDImageProcessor.cpp  IRTDImageProcessor.h  ImageProcessor.cpp  ImageProcessor.h  LedController.cpp  LedController.h  LocalModelDataStore.cpp  LocalModelDataStore.h  Marker.cpp  Marker.h  Model.cpp  Model.h  ModelDataStore.cpp  ModelDataStore.h  Object.cpp  Object.h  (+18 more)
mqtt/: .cproject
mqtt/src/: Publisher.cpp  Publisher.h  Subscriber.cpp  Subscriber.h
src/: ArucoImageProcessor.cpp  ArucoImageProcessor.h  ArucoObject.cpp  ArucoObject.h  BlockingQueue.h  ComputerVision.cpp  ComputerVision.h  IImageProcessor.h  IRImageProcessor.cpp  IRImageProcessor.h  IRObject.h  Marker.cpp  Marker.h  Model.cpp  Model.h  Object.cpp  Object.h  cvApplication.cpp
stereoCalibrator/: .cproject  .project  left_camMatrix.yml  right_camMatrix.yml
stereoCalibrator/src/: stereoCalibrator.cpp
